--- a/templates/network-plugins/cilium/vxlan-values.yaml
+++ b/templates/network-plugins/cilium/vxlan-values.yaml
@@ -2287,7 +2287,8 @@ operator:
   # -- Node tolerations for cilium-operator scheduling to nodes with taints
   # ref: https://kubernetes.io/docs/concepts/scheduling-eviction/taint-and-toleration/
   tolerations:
-  - operator: Exists
+  - key: "node-role.kubernetes.io/master"
+    operator: Exists
     # - key: "key"
     #   operator: "Equal|Exists"
     #   value: "value"
